tests/reference/asr-test_dict6-95e3b14.stderr
semantic error: Type mismatch in pop's key value, the types must be compatible
 --> tests/errors/test_dict6.py:5:17
  |
5 |     res = d.pop("a")
  |                 ^^^ type mismatch (found: 'str', expected: 'i32')
